<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:background="@color/color_ffffff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_head"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        android:layout_marginBottom="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@mipmap/default_head" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0d5"
        android:background="@color/color_d7d7d7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@color/color_f8f8f8"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_50"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_23"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="@dimen/dp_0d5"
            android:layout_height="@dimen/dp_33"
            android:background="@color/color_bfcdd6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp_27">

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_42"
                android:background="@null"
                android:hint="@string/please_input_account"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:text="18710770698"
                android:textColor="@color/color_222222"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:id="@+id/iv_account_delete"
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/login_account_delete"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0d5"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:background="@color/color_bfcdd6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@color/color_f8f8f8"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_50"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_23"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="@dimen/dp_0d5"
            android:layout_height="@dimen/dp_33"
            android:background="@color/color_bfcdd6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp_27">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_27"
                android:layout_marginStart="@dimen/dp_42"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/please_input_password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:singleLine="true"
                android:text="1871077069"
                android:textColor="@color/color_222222"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:id="@+id/iv_password_delete"
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_15"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/login_account_delete"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0d5"
        android:background="@color/color_d7d7d7" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_23"
        android:background="@drawable/login_bt_selector"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_23"
        android:text="@string/call_us"
        android:textColor="@color/color_38acff"
        android:textSize="@dimen/sp_14" />
</LinearLayout>